k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lumitree
  labels:
    app.kubernetes.io/name: lumitree
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      name: http
  selector:
    app.kubernetes.io/name: lumitree
